fix body padding-top to remove the gap between header and main div

--- a/css/main.css
+++ b/css/main.css
@@ -259,11 +259,16 @@ footer a:hover, footer a:focus, footer a:active {
 	}
 }
 
+@media(max-width: 800px) and (min-width: 603px) {
+	body {
+		padding-top: 57px;
+		/*made padding smaller because for mobile screens header and footer are smaller */
+	}
+}
+
 @media(max-width: 800px), (max-height: 480px) {
 	body {
 		padding-bottom: 40px;
-		padding-top: 81px;
-		/*made padding smaller because for mobile screens header and footer are smaller */
 	}
 	
 	header h1 {
@@ -303,6 +308,10 @@ footer a:hover, footer a:focus, footer a:active {
 }
 
 @media(max-width: 603px) {
+	body {
+		padding-top: 81px;
+	}
+	
 	header h1 {
 		padding-bottom: 5px;
 	}
